<resources>
    <string name="app_name">LogIt</string>
    <string name="app_caption">Your daily companion</string>

    <string name="login_field_email">Enter email</string>
    <string name="login_field_password">Enter password</string>
    <string name="login_button_login">Login</string>
    <string name="login_signUp">New user? Sign up here!</string>
    <string name="login_resendVerificationEmail">Did not receive verification email?</string>
    <string name="login_forgotPassword">Forgot your pasword?</string>

    <string name="resetPW_Guide">Enter your email below</string>
    <string name="resetPW_Hint">email</string>
    <string name="resetPW_button">Send Password Reset Email</string>

    <string name="title_entry_task">Entry</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_external_cal">Add to External Calendar</string>
    <string name="title_all_entries">All Entries Of This Type</string>
    <string name="title_today">Today</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>

    <string name="title_activity_daily_log">Daily Log</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="action_clear_search">Clear Search History</string>

    <string name="menu_today">Today</string>
    <string name="menu_this_month">This Month</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_collections">Collections</string>
    <string name="menu_eisen">Eisenhower Matrix</string>
    <string name="nav_tag_groups">Tag Groups</string>
    <string name="nav_new">New</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="bottom_btn_notes">Notes</string>
    <string name="bottom_btn_tasks">Tasks</string>
    <string name="bottom_btn_events">Events</string>

    <string name="cal_year_hint">Year</string>
    <string name="cal_day_hint">Day</string>
    <string name="cal_month_go">Go To Month</string>
    <string name="cal_day_go">Go To Day</string>

    <string name="form_type">Type</string>
    <string name="form_title">Title (required)</string>
    <string name="form_date">Date (required)</string>
    <string name="form_time">Time (required)</string>
    <string name="form_location">Location</string>
    <string name="form_collection">Collection</string>
    <string name="form_priority">Priority:</string>
    <string name="form_description">Description</string>
    <string name="form_monthlyLog">Add to Monthly Log</string>
    <string name="form_submit">Submit</string>
    <string name="form_selectPriority">Select Priority</string>

    <string name="eisenForm_importance">Importance</string>
    <string name="eisenForm_urgency">Urgency</string>
    <string name="eisenForm_ok">Ok</string>
    <string name="eisenForm_selectNone">Clear</string>

    <string name="eisen_do">Do</string>
    <string name="eisen_decide">Decide</string>
    <string name="eisen_delegate">Delegate</string>
    <string name="eisen_eliminate">Eliminate</string>

    <string name="search_hint">Search All (Title/Description)</string>

    <!--<string-array name="form_type_array">-->
    <!--<item>Task</item>-->
    <!--<item>Event</item>-->
    <!--<item>Note</item>-->
    <!--</string-array>-->

    <string-array name="form_eisen_array">
        <item>do</item>
        <item>decide</item>
        <item>delegate</item>
        <item>eliminate</item>
    </string-array>

    <string-array name="form_eisen_importance">
        <item>Important</item>
        <item>Not Important</item>
    </string-array>

    <string-array name="form_eisen_urgency">
        <item>Urgent</item>
        <item>Not Urgent</item>
    </string-array>

    <string-array name="months_array">
        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
