<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EisenhowerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Do"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#8bc34a"
            android:gravity="center"
            android:text="@string/eisen_do"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Decide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4fc3f7"
            android:gravity="center"
            android:text="@string/eisen_decide"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Delegate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffc107"
            android:gravity="center"
            android:text="@string/eisen_delegate"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Eliminate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f44336"
            android:gravity="center"
            android:text="@string/eisen_eliminate"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>